upd: dto for each feature
